crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_u64_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u64`
  ┌─ [snippet]:3:7
  │
3 │   u64(-1)
  │       ^^ does not fit into type `u64`


